fix overflow

--- a/post-card-frontend/src/styles/_variables.scss
+++ b/post-card-frontend/src/styles/_variables.scss
@@ -1,4 +1,5 @@
 $blue: #334ABF;
 $pink: #ffe1f7;
 $white: #fbfbfd;
-$black: #303636
+$black: #303636;
+$yellow: #f9dc5c;
