--- a/post-card-frontend/src/styles/navBar.scss
+++ b/post-card-frontend/src/styles/navBar.scss
@@ -21,12 +21,7 @@ $base-transition: all 0.3s;
 	background: $white;
 }
 @mixin burg_con {
-	// height: 5vh;
-	// min-width: 5vh;
-	// position: relative;
-	// margin: 3.7vw 0.2vh 1vw;
-	// cursor: pointer;
-	// border: rgb(131, 232, 131) 2px solid;
+	cursor: pointer;
 	position: fixed;
 	display: flex;
 	height: 4vh;
@@ -40,7 +35,7 @@ $base-transition: all 0.3s;
 .nav-bar-container {
 	background-color: $blue;
 	display: flex;
-	height: 6vh;
+	height: 6.5vh;
 	align-items: center;
 	.nav-ul {
 		display: flex;
@@ -54,6 +49,7 @@ $base-transition: all 0.3s;
 			cursor: pointer;
 			justify-content: space-between;
 			color: $white;
+			text-decoration: none !important;
 		}
 		.nav-li:nth-child(1) {
 			margin-left: 13vw;
@@ -64,7 +60,7 @@ $base-transition: all 0.3s;
 	}
 }
 .icon {
-	font-size: 4vw;
+	font-size: clamp(5vw, 4vh, 5.5vw)
 }
 
 .login,
@@ -81,6 +77,50 @@ $base-transition: all 0.3s;
 .signup:hover {
 	background-color: $pink;
 	color: $blue;
+}
+
+// input on click for searching cards
+
+.inpt {
+	width: 36vw;
+	height: 5.5vh;
+	background-color: $pink;
+	border: 1px solid $black;
+	border-radius: 0.7vw;
+	float: right;
+	margin-top: -6vh;
+	// margin-right: 2vw;
+	// z-index: 1;
+	font-size: 1.1rem;
+	position: relative;
+    margin-right: -40vw;
+    transition: ease-out 0.6s;
+
+    
+}
+
+.close-icon {
+	float: right;
+	margin-top: -5.3vh;
+	font-size: clamp(2rem, 3vw, 2.4rem);
+	z-index: 2;
+	position: relative;
+	// margin-right: 2.3vw;
+	// font-weight: 500;
+    margin-right: -40vw;
+    cursor: pointer;
+    transition: ease-out 0.6s;
+
+
+}
+
+.inpt.active, .close-icon.active{
+    margin-right: 1.8vw;
+    transition: ease-in 0.6s;
+}
+
+body {
+	overflow: hidden !important;
 }
 
 @media only screen and (max-width: 830px) {
@@ -118,7 +158,7 @@ $base-transition: all 0.3s;
 
 	//handle close burger
 	// body {
-	//     overflow: hidden;
+	//     overflow-y: hidden !important;
 	// }
 	.close {
 		@include burg_con;
@@ -152,37 +192,24 @@ $base-transition: all 0.3s;
 			// float: right;
 			// margin-right: -8.7%;
             max-width: 45vw !important;
+            transition: ease-out 0.7s;
+            overflow: hidden;
             
-            .nav-li:nth-child(1){
-                margin-left: 0 !important;
-            }
-            .nav-li:nth-child(4) {
-                margin-right: 0;
-            }
+
+			.nav-li:nth-child(1) {
+				margin-left: 0 !important;
+			}
+			.nav-li:nth-child(4) {
+				margin-right: 0;
+			}
 		}
 
 		.nav-ul.active {
 			margin-left: calc(100vw - 45vw);
-			transition: ease-in-out 0.9s;
+			transition: ease-in-out 0.7s;
 		}
 	}
 
-	// .nav-ul2 {
-	// 	display: flex;
-	//     flex-direction: column;
-	//     align-items: center;
-	// 	border: orangered 2px solid;
-	//     min-width: 50vw;
-	//     height: 88vh;
-	//     float: right;
-	//     background-color: $pink;
-	//     border-top-left-radius: 1vw;
-	//     border-bottom-left-radius: 1vw;
 
-	//     .nav-li2 {
-	//         list-style: none;
-	//         margin-top: 10vh;
-	//         font-size: 01rem;
-	//     }
-	// }
 }
+
